@@ -7,6 +7,7 @@ In this files, you will find changes between java OMiSCID versions.
 
 *must: solve the castor proliferation problem
 *must: find and kill all "< (that is manually generated xml)
+*Q: should a txt record be "part" when a big constant is present? I don't think so.
 *Q: how is reflected in the dnssd txt record the fact that a connector has an udp port? I think that we always use tcp to init connections so this is not a real question
 *should: make configurable (through Java and C++) the timeout for control queries
 *could: dnssd client auto connect/reconnect
@@ -22,6 +23,8 @@ r
         fix:  can now safely listen to one variable multiple times with proper notification (was sending multiple notifications to each listener)
         fix:  removed interferences between variable modifications and variable consultation causing multiple notifications of some variable modifications
         fix:  problem with readdition of remote variable change listeners
+        fix:  peerId was not shown in variables given by ServiceProxy#getVariables
+        impr: (API) minor changes providing Service and ServiceProxy with both getPeerId and getPeerIdAsString methods
         impr: now queries complete service description only when needed (was basically asking to every service)
         impr: it is now possible for RemoteVariableChangeListener to unsubscribe itself when it is called back
         fix:  (gui) in case of subscription to remote variable changes, gui was not handling properly empty new value (it now does)
